--- a/css/project.css
+++ b/css/project.css
@@ -8,6 +8,18 @@ body{
 .text-b{
     color: #3A3A3A;
 }
+.btn{
+    font-size: 1rem;
+    font-weight: 900;
+    color: white;
+    background-color: #E02C6D;
+    border: none;
+    border-radius: 20px;
+    padding: 15px;
+}
+main > section{
+    margin-top: 90px;
+}
 /* nav */
 .navbar,.bannar{
     max-width: 1440px;
@@ -18,6 +30,7 @@ body{
 .navbar h4{
     font-size: 1.2rem;
     font-weight: 900;
+    
 }
 .nav-contain{
     align-items: center;
@@ -46,4 +59,50 @@ body{
 .paragraph{
     font-size: 1rem;
     font-weight: 600;
+}
+/* main */
+/* card section */
+.card-containar{
+    max-width: 1440px;
+    margin: 0px auto;
+
+}
+.card-containar h2{
+    font-size: 1.8rem;
+    font-weight: 600;
+    text-align: center;
+    color: rgba(58, 58, 58, 1);
+}
+.card{
+    padding: 30px 0px 30px 60px;
+
+    background-color: white;
+    box-shadow: 12px 10px 15px 20px #AAAAAA;
+    width: 380px;
+    height: 450px;
+
+}
+.card-head{
+    font-size: 1.8rem;
+    font-weight: 300;
+}
+.card h4{
+    font-size: 1rem;
+}
+.card-para i{
+    color: rgba(251, 130, 0, 1);
+}
+.card-para{
+    font-size: 0.9rem;
+    font-weight: bold;
+    color: rgba(120, 120, 133, 1);
+}
+
+.card-containar-content{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 20px;
+    margin-left: 70px;
+    margin-right: 130px;
+
 }
