--- a/css/project.css
+++ b/css/project.css
@@ -59,7 +59,10 @@ main > section{
 .paragraph{
     font-size: 1rem;
     font-weight: 600;
+    color: rgba(58, 58, 58, 1);
 }
+
+
 /* main */
 /* card section */
 .card-containar{
@@ -105,4 +108,56 @@ main > section{
     margin-left: 70px;
     margin-right: 130px;
 
+}
+.see{
+    font-size: 1rem;
+    font-weight: bold;
+    color: rgba(224, 44, 109, 0.87);
+    padding-top: 30px;
+    text-align: right;
+}
+.see i{
+    color: rgba(224, 44, 109, 0.87);
+}
+/* feature section */
+.feature-section{
+    margin-top: 90px;
+    /* padding-top: 30px; */
+}
+.feature{
+    max-width: 1110px;
+    margin: 0px auto;
+    justify-content: space-between;
+    align-items: center;
+    gap: 90px;
+}
+.feature-head{
+    font-size: 2.1rem;
+    font-weight: bold;
+}
+.feature-para{
+    font-size: 1rem;
+    font-weight: 800;
+    color: #6C6C6C;
+}
+.button{
+    border-radius: 0px;
+}
+/* footer */
+.footer{
+    background-color: rgba(0, 25, 49, 1);
+    background-color: ;
+    text-align: center;
+    color: white;
+    padding: 20px;
+    margin-top: 30px;
+}
+.footer h2{
+    font-size: 1.6rem;
+    font-weight: 800;
+}
+.footer-para{
+    font-size:1.1rem;
+    font-weight: 900;
+    color: rgba(217, 219, 225, 1);
 }
